--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -2,6 +2,8 @@
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 # Work within a folder named `/source`
 WORKDIR /source
+ENV PORT 80
+EXPOSE 80
 
 # Copy everything in this project and build app
 COPY . ./dotnetcore-docs-hello-world/
@@ -15,8 +17,8 @@ COPY --from=build /app ./
 
 # Expose port 80
 # This is important in order for the Azure App Service to pick up the app
-ENV PORT 80
-EXPOSE 80
+# ENV PORT 80
+# EXPOSE 80
 
 # Start the app
 ENTRYPOINT ["dotnet", "dotnetcoresample.dll"]
